added cyclic (recurrent) links; fixed some TODO items

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -1,5 +1,5 @@
 /** This file should be in the command line during testing and development.
- *  Actual cofiguration files to be executed are specified by file reference.
+ *  Actual configuration files to be executed are specified by file reference.
  */
 
 //<#file> "../training/hcl_test01.cfg" </>
