--- a/eval/bhcl_eval_set_01.cfg
+++ b/eval/bhcl_eval_set_01.cfg
@@ -26,7 +26,7 @@
 
         <bhcl_eval_e2e_s>
             name: <st_s> "HTP OPERATIONS" </>
-            src:  <st_s> "y = htp( htp( a ) );" </>
+            src:  <st_s> "y = a^t^t;" </>
             in: <bhvm_hf3_adl_s> <st_s> "( ( 1 2 )( 3 4 ) )" </> </>
             out:<bhvm_hf3_adl_s> <st_s> "( ( 1 2 )( 3 4 ) )" </> </>
             //verbosity:<s2_t>5</>
@@ -58,9 +58,9 @@
 
             src:  <st_s>
             "
-                w1 = adapt(  0.5 );
-                w2 = adapt(  0.7 );
-                w3 = adapt( -0.3 );
+                adaptive w1 =  0.5;
+                adaptive w2 =  0.7;
+                adaptive w3 = -0.3;
                 y = tanh( lgst( w1 ) * tanh( w2 ) + lgst_leaky( w2 * w3 ) + a );
             "
             </>
@@ -80,8 +80,8 @@
 
             src:  <st_s>
             "
-                v1 = adapt( 0.5 1.0 );
-                y = htp( a ) ** v1;
+                adaptive v1 = ( 0.5 1.0 );
+                y = a^t ** v1;
             "
             </>
 
@@ -100,9 +100,9 @@
 
             src:  <st_s>
             "
-                w1 = adapt( ( 1 2 ) ( -1 0 ) );
+                adaptive w1 = ( ( 1 2 ) ( -1 0 ) );
                 v2 = ( 1 2 );
-                y = htp( htp( w1 ** a ) ** v2 ) ** v2;
+                y = ( ( ( w1 ** a )^t ) ** v2 )^t ** v2;
             "
             </>
 
@@ -122,10 +122,13 @@
             src:  <st_s>
             "
                 verify_signature ( y, z => a );
-                w1 = adapt : rand ( [dimof(a)][dimof(a)]# );
-                v1 = adapt : rand ( [dimof(a)]# );
-                y = htp( ( w1 + htp( w1 ) ) ** a ) ** v1;
-                z = ( htp( a ) ** htp( w1 ) ) ** v1;
+                adaptive w1 = random ( [dimof(a)][dimof(a)]# );
+
+                // 'adaptive' can be used as attribute or operator
+                // If used as attribute, the variable name is remembered and can be used to identify the adaptive holor in the virtual machine.
+                v1 = adaptive( random ( [dimof(a)]# ) );
+                y = ( ( w1 + w1^t ) ** a )^t ** v1;
+                z = ( a^t ** w1^t ) ** v1;
             "
             </>
 
@@ -152,11 +155,11 @@
                 verify_signature ( y, z => a );
 
                 dm = 4;
-                w1 = adapt : rand ( [dm][dimof(a)]# );
-                w2 = adapt : rand ( [dimof(a)][dm]# );
-                v1 = adapt : rand ( [dm]# );
-                y = htp( htp( w1 ** a ) ** v1 ) ** rand ( [dimof(a[0])]# );
-                z = htp( ( htp( a ) ** htp( w1 ) ) ** v1 ) ** rand ( [dimof(a[0])]# );
+                adaptive w1 = random ( [dm][dimof(a)]# );
+                adaptive w2 = random ( [dimof(a)][dm]# );
+                adaptive v1 = random ( [dm]# );
+                y = ( ( w1 ** a )^t ** v1 )^t ** random ( [dimof(a[0])]# );
+                z = ( ( a^t ** w1^t ) ** v1 )^t ** random ( [dimof(a[0])]# );
             "
             </>
 
@@ -183,15 +186,15 @@
                 verify_signature( y, z => a );
 
                 dimmid = 4;
-                v1 = adapt : rand( [dimof(a)]# );
-                v2 = adapt : rand( [dimmid  ]# );
-                w1 = adapt :     ( [dimmid  ][dimof(a)]# );
-                w2 = adapt : rand( [dimmid  ][dimof(a)]# );
-                w3 = adapt : rand( [dimof(a)][dimmid  ]# );
+                adaptive v1 = random( [dimof(a)]# );
+                adaptive v2 = random( [dimmid  ]# );
+                adaptive w1 = random( [dimmid  ][dimof(a)]# );
+                adaptive w2 = random( [dimmid  ][dimof(a)]# );
+                adaptive w3 =       ( [dimof(a)][dimmid  ]# ); // auto-randomization
 
                 // some wild crazy operations with all adaptives
-                y = htp( ( lgst( w1 ** a ) * tanh( htp( w3 ) ** a ) + v2 + lgst_leaky( w2 + w1 ) ** ( a - v1 ) ) ) ** rand( [dimmid]# );
-                z = htp( ( lgst( w1 ** htp( w2 ) ** htp( w3 ) ) ** a ) ) ** rand( [dimmid]# );
+                y = ( ( lgst( w1 ** a ) * tanh( w3^t ** a ) + v2 + lgst_leaky( w2 + w1 ) ** ( a - v1 ) ) )^t ** random( [dimmid]# );
+                z = ( ( lgst( w1 ** w2^t ** w3^t ) ** a ) )^t ** random( [dimmid]# );
             "
             </>
 
@@ -207,5 +210,35 @@
 
             max_dev:<f3_t>1e-08</>
         </>
+
+/// --------------------------------------------------------------------------------------------------------------------
+
+        <bhcl_eval_e2e_s>
+            name: <st_s> "Recurrent" </>  sig:<st_s> "( y => a )" </>
+
+            src:  <st_s>
+            "
+                verify_signature( y => a );
+
+                cell plus( y => a, b ) { y = a + b; };
+
+                recurrent q = -10;
+
+                q = plus( q, a );
+
+                y = q;
+            "
+            </>
+
+            infer_cycles: <sz_t> 20 </>
+
+            in: <bhvm_hf3_adl_s> <st_s> "2" </> </>
+            verbosity:<s2_t>10</>
+
+            max_dev:<f3_t>1e-08</>
+        </>
+
+/// --------------------------------------------------------------------------------------------------------------------
+
     </>
 </>
