--- a/training/hcl_test01.cfg
+++ b/training/hcl_test01.cfg
@@ -18,19 +18,18 @@ verify_signature ( y => dim_y, a );
 
 cell layer( y => hidden_nodes, a )
 {
-    w = adapt : rand( [ hidden_nodes ][ dimof( a ) ]# );
-    b = adapt( [ hidden_nodes ]0 );
+    adaptive w = random( [ hidden_nodes ][ dimof( a ) ]# );
+    adaptive b = [ hidden_nodes ]0;
     q = w ** a + b;
 
-    c = adapt( [ hidden_nodes ]0.5 );
-    one = ( [ hidden_nodes ]1.0 );
+    adaptive c = 0.5;
 
-    // switch betwen activation functions
-    y = c * tanh( q ) + ( one - c ) * relu( q );
+    // switch between activation functions
+    y = c * tanh( q ) + ( 1 - c ) * relu( q );
 };
 
 //y =	tanh : layer( dim_y ) : relu_leaky : layer( 16 ) : relu_leaky : layer( 16 ) : relu_leaky : layer( 16, a );
-y =	layer( dim_y )  : layer( 16 )  : layer( 16 )  : layer( 16, a );
+y =	layer( dim_y ) : layer( 16 ) : layer( 16 ) : layer( 16, a );
 "           </>
 
             in_size :<sz_t>32</>
