Decided on name 'haptive' for the new adaptive framework; created dedicated library; ported relevant code

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -3,5 +3,6 @@
  */
 
 //<#file> "../training/hcl_test01.cfg" </>
-<#file> "../eval/bhcl_eval_set_01.cfg" </>
+//<#file> "../eval/bhcl_eval_set_01.cfg" </>
+<#file> "../eval/haptive_eval_set_01.cfg" </>
 
