--- a/eval/haptive_eval_set_01.cfg
+++ b/eval/haptive_eval_set_01.cfg
@@ -1,12 +1,12 @@
-<bhcl_eval_set_s>
+<haptive_eval_set_s>
     sig:       <st_s> "( y => a )" </>
     verbosity: <s2_t>-1            </>
     max_dev:   <f3_t>1e-08 </>
-    arr: <bhcl_eval_arr_s>
+    arr: <haptive_eval_arr_s>
 
 /// --------------------------------------------------------------------------------------------------------------------
 
-        <bhcl_eval_e2e_s>
+        <haptive_eval_e2e_s>
             name: <st_s> "COPY"   </>
             src:  <st_s> "y = a;" </>
             in: <bhvm_hf3_adl_s> <st_s> "( ( 1 2 )( 3 4 ) )" </> </>
@@ -15,7 +15,7 @@
 
 /// --------------------------------------------------------------------------------------------------------------------
 
-        <bhcl_eval_e2e_s>
+        <haptive_eval_e2e_s>
             name: <st_s> "SCALAR OPERATIONS" </>
             src:  <st_s> "y = exp( lgst( ( -( a - 3 ) * 5 * a + 5 ) + 16 ) + lgst( -1 ) );" </>
             in: <bhvm_hf3_adl_s> <st_s> "  4" </> </>
@@ -24,7 +24,7 @@
 
 /// --------------------------------------------------------------------------------------------------------------------
 
-        <bhcl_eval_e2e_s>
+        <haptive_eval_e2e_s>
             name: <st_s> "HTP OPERATIONS" </>
             src:  <st_s> "y = a^t^t;" </>
             in: <bhvm_hf3_adl_s> <st_s> "( ( 1 2 )( 3 4 ) )" </> </>
@@ -32,9 +32,9 @@
             //verbosity:<s2_t>5</>
         </>
 
-        // ---------------------------------------------------------------------------------------------------------------------
+/// --------------------------------------------------------------------------------------------------------------------
 
-        <bhcl_eval_e2e_s>
+        <haptive_eval_e2e_s>
             name: <st_s> "ACKERMANN" </>  sig: <st_s> "( y => )" </>
             src:  <st_s>
             "
@@ -53,7 +53,7 @@
 
 /// --------------------------------------------------------------------------------------------------------------------
 
-        <bhcl_eval_e2e_s>
+        <haptive_eval_e2e_s>
             name: <st_s> "ADAPT (Scalar)" </>  sig:<st_s> "( y => a )" </>
 
             src:  <st_s>
@@ -67,7 +67,7 @@
 
             in: <bhvm_hf3_adl_s> <st_s> "1" </> </>
 
-            grad: <bhcl_eval_grad_s> epsilon:<f3_t>0.001</> out:<bhvm_hf3_adl_s> <st_s> "3" </> </>  max_dev:<f3_t>1e-02</> </>
+            grad: <haptive_eval_grad_s> epsilon:<f3_t>0.001</> out:<bhvm_hf3_adl_s> <st_s> "3" </> </>  max_dev:<f3_t>1e-02</> </>
 
             // verbosity:<s2_t>5</>
             max_dev:<f3_t>1e-08</>
@@ -75,7 +75,7 @@
 
 /// --------------------------------------------------------------------------------------------------------------------
 
-        <bhcl_eval_e2e_s>
+        <haptive_eval_e2e_s>
             name: <st_s> "ADAPT (Vector)" </>  sig:<st_s> "( y => a )" </>
 
             src:  <st_s>
@@ -87,15 +87,15 @@
 
             in: <bhvm_hf3_adl_s> <st_s> "( 1 2 )" </> </>
 
-            grad: <bhcl_eval_grad_s> epsilon:<f3_t>0.001</> out:<bhvm_hf3_adl_s> <st_s> "1" </> </>  max_dev:<f3_t>1e-02</> </>
+            grad: <haptive_eval_grad_s> epsilon:<f3_t>0.001</> out:<bhvm_hf3_adl_s> <st_s> "1" </> </>  max_dev:<f3_t>1e-02</> </>
 
             //verbosity:<s2_t>2</>
             max_dev:<f3_t>1e-08</>
         </>
 
-        // ---------------------------------------------------------------------------------------------------------------------
+/// --------------------------------------------------------------------------------------------------------------------
 
-        <bhcl_eval_e2e_s>
+        <haptive_eval_e2e_s>
             name: <st_s> "ADAPT (Vector,Mat)" </>  sig:<st_s> "( y => a )" </>
 
             src:  <st_s>
@@ -108,7 +108,7 @@
 
             in: <bhvm_hf3_adl_s> <st_s> "( ( 1 2 ) ( 1 2 ) )" </> </>
 
-            grad: <bhcl_eval_grad_s> epsilon:<f3_t>0.001</> out:<bhvm_hf3_adl_s> <st_s> "1" </> </>  max_dev:<f3_t>1e-02</> </>
+            grad: <haptive_eval_grad_s> epsilon:<f3_t>0.001</> out:<bhvm_hf3_adl_s> <st_s> "1" </> </>  max_dev:<f3_t>1e-02</> </>
 
             //verbosity:<s2_t>2</>
             max_dev:<f3_t>1e-08</>
@@ -116,7 +116,7 @@
 
 /// --------------------------------------------------------------------------------------------------------------------
 
-        <bhcl_eval_e2e_s>
+        <haptive_eval_e2e_s>
             name: <st_s> "ADAPT (Out Channels)" </>  sig:<st_s> "( y, z => a )" </>
 
             src:  <st_s>
@@ -134,7 +134,7 @@
 
             in: <bhvm_hf3_adl_s> <st_s> "( 1 2 )" </> </>
 
-            grad: <bhcl_eval_grad_s>
+            grad: <haptive_eval_grad_s>
                 epsilon:<f3_t>0.00001</>
                 out:<bhvm_hf3_adl_s> <st_s> "1" </> <st_s> "1" </> </>
                 max_dev:<f3_t>1e-02</>
@@ -147,7 +147,7 @@
 
 /// --------------------------------------------------------------------------------------------------------------------
 
-        <bhcl_eval_e2e_s>
+        <haptive_eval_e2e_s>
             name: <st_s> "ADAPT (Mat*Mat)" </>  sig:<st_s> "( y, z => a )" </>
 
             src:  <st_s>
@@ -158,14 +158,14 @@
                 adaptive w1 = random ( [dm][dimof(a)]# );
                 adaptive w2 = random ( [dimof(a)][dm]# );
                 adaptive v1 = random ( [dm]# );
-                y = ( ( w1 ** a )^t ** v1 )^t ** random ( [dimof(a[0])]# );
+                y = ( ( w1  ** a )^t  ** v1 )^t ** random ( [dimof(a[0])]# );
                 z = ( ( a^t ** w1^t ) ** v1 )^t ** random ( [dimof(a[0])]# );
             "
             </>
 
             in: <bhvm_hf3_adl_s> <st_s> "(( 1 2 3 )( -1 -2 -3 ))" </> </>
 
-            grad: <bhcl_eval_grad_s>
+            grad: <haptive_eval_grad_s>
                 epsilon:<f3_t>0.00001</>
                 out:<bhvm_hf3_adl_s> <st_s> "1" </> <st_s> "1" </> </>
                 max_dev:<f3_t>1e-02</>
@@ -178,7 +178,7 @@
 
 /// --------------------------------------------------------------------------------------------------------------------
 
-        <bhcl_eval_e2e_s>
+        <haptive_eval_e2e_s>
             name: <st_s> "ADAPT (crazy)" </>  sig:<st_s> "( y, z => a )" </>
 
             src:  <st_s>
@@ -200,7 +200,7 @@
 
             in: <bhvm_hf3_adl_s> <st_s> "( 1 2 3 )" </> </>
 
-            grad: <bhcl_eval_grad_s>
+            grad: <haptive_eval_grad_s>
                 epsilon:<f3_t>0.00001</>
                 out:<bhvm_hf3_adl_s> <st_s> "-2" </> <st_s> "-2" </> </>
                 max_dev:<f3_t>1e-02</>
@@ -213,7 +213,7 @@
 
 /// --------------------------------------------------------------------------------------------------------------------
 
-        <bhcl_eval_e2e_s>
+        <haptive_eval_e2e_s>
             name: <st_s> "Forward Recurrent" </>  sig:<st_s> "( y => a )" </>
 
             src:  <st_s>
@@ -237,7 +237,7 @@
         /** This test creates a network with branch- and fuse-points in order to test
          *  correct fusion behavor in forward mapping and gradient computation.
          */
-        <bhcl_eval_e2e_s>
+        <haptive_eval_e2e_s>
             name: <st_s> "Branch-Fuse" </>  sig:<st_s> "( y => a )" </>
 
             src:  <st_s>
@@ -256,7 +256,7 @@
             infer_cycles: <sz_t> 20 </>
             in: <bhvm_hf3_adl_s> <st_s> "2" </> </>
             out:<bhvm_hf3_adl_s> <st_s> "60" </> </>
-            grad: <bhcl_eval_grad_s> epsilon:<f3_t>0.001</> out:<bhvm_hf3_adl_s> <st_s> "50" </> </>  max_dev:<f3_t>1e-02</> </>
+            grad: <haptive_eval_grad_s> epsilon:<f3_t>0.001</> out:<bhvm_hf3_adl_s> <st_s> "50" </> </>  max_dev:<f3_t>1e-02</> </>
 
             //verbosity:<s2_t>10</>
             max_dev:<f3_t>1e-08</>
