virtual machine adaptations; (re)moved deprecated code

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -3,6 +3,7 @@
  */
 
 //<#file> "../training/hcl_test01.cfg" </>
+<#file> "../training/haptive_test01.cfg" </>
 //<#file> "../eval/bhcl_eval_set_01.cfg" </>
-<#file> "../eval/haptive_eval_set_01.cfg" </>
+//<#file> "../eval/haptive_eval_set_01.cfg" </>
 
