--- a/training/haptive_test01.cfg
+++ b/training/haptive_test01.cfg
@@ -11,7 +11,7 @@
         </>
 
     builder:
-        <bhcl_vm_builder_s>
+        <haptive_vm_builder_s>
             src: <st_s>
 "
 verify_signature ( y => dim_y, a );
