finalized haptive; worked on new haptive framework codenamed 'lion' utilizing type-variant bhvm-framework

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -3,5 +3,6 @@
  */
 
 //<#file> "../training/haptive_test01.cfg" </>
-<#file> "../eval/haptive_eval_set_01.cfg" </>
+//<#file> "../eval/haptive_eval_set_01.cfg" </>
+<#file> "../eval/lion_eval_01.cfg" </>
 
