--- a/eval/lion_eval_01.cfg
+++ b/eval/lion_eval_01.cfg
@@ -1,6 +1,81 @@
-<lion_nop_eval_ar2_s>
-    ha:<st_s>"3"</>
-    hb:<lion_holor_s>NULL</>
-    hr:<lion_holor_s>NULL</>
-    nop:<lion_nop_ar2_add_s></>
-</>
+<lion_nop_eval_set_s>
+    param: <lion_nop_eval_param_s> verbosity:1 </>
+    arr: <lion_nop_eval_arr_s>
+
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_identity_s></>   ha:"<f2_t>2"    hr:"<f2_t>2" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_neg_s></>        ha:"<f2_t>2"    hr:"<f2_t>-2" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_floor_s></>      ha:"<f2_t>2.5"  hr:"<f2_t>2.0" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_ceil_s></>       ha:"<f2_t>2.5"  hr:"<f2_t>3.0" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_exp_s></>        ha:"<f2_t>0"    hr:"<f2_t>1" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_inv_s></>        ha:"<f2_t>2"    hr:"<f2_t>0.5" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_s></>       ha:"<f2_t>0"    hr:"<f2_t>0.5" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_hard_s></>  ha:"<f2_t>1"    hr:"<f2_t>0.75" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_leaky_s></> ha:"<f2_t>1"    hr:"<f2_t>0.75" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_tanh_s></>       ha:"<f2_t>0"    hr:"<f2_t>0" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_tanh_hard_s></>  ha:"<f2_t>2"    hr:"<f2_t>1" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_tanh_leaky_s></> ha:"<f3_t>2"    hr:"<f3_t>1.01" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_softplus_s></>   ha:"<f2_t>-100" hr:"<f2_t>0" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_relu_s></>       ha:"<f2_t>-1"   hr:"<f2_t>0" </> </>
+    <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_relu_leaky_s></> ha:"<f3_t>-1"   hr:"<f3_t>-0.01" </> </>
+
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<f2_t>((1))" hb:"((1))" hr:"((1))" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"(1 2)" hb:"3" hr:"(3 6)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"(3 2)"  hb: "(2 1)"  hr: "(5 3)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f2_t>(3 2)" hb:"<f2_t>(2 1)" hr:"<f2_t>(5 3)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f2_t>(3 2)" hb:"<f3_t>(2 1)" hr:"<f3_t>(5 3)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f3_t>(3 2)" hb:"<f2_t>(2 1)" hr:"<f3_t>(5 3)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_sub_s></>  ha:"(3 2)" hb:"(2 1)" hr:"(1 1)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_div_s></>  ha:"(4 4)" hb:"(2 1)" hr:"(2 4)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"(1 2)" hb:"(2 2)" hr:"(2 4)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"3" hb:"(1 2)" hr:"(3 6)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<htp>(1 2)" hb:"((2 3 1)(4 5 2))" hr:"<htp>(10 13 5)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<htp>((2 3 1)(4 5 2))" hb:"(1 2)" hr:"(10 13 5)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"((2 3)(4 5)(1 1))" hb:"(1 2)" hr:"(8 14 3)" </> </>
+
+    <lion_nop_eval_generator_s>
+        param: <lion_nop_eval_param_s> ha:"#" hb:"#" verbosity:1 rval: 1235 </>
+
+        set_htp   : true  // changes htp-state
+        set_value : true  // sets/changes values
+        set_shape : true  // sets/changes shape
+        set_dim   : true  // sets/changes dimensions
+        set_v_type: true  // sets/changes value type
+
+        max_shape_size:  3
+        max_dim       :  3
+        v_min         : -1.0
+        v_max         :  1.0
+        cycles        : 1000
+
+        //eval : <lion_nop_eval_show_param_s></>
+        //eval: <lion_nop_eval_ar2_s></>
+
+        eval: <lion_nop_eval_set_s>
+            param: <lion_nop_eval_param_s> verbosity:1 </>
+            arr: <lion_nop_eval_arr_s>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_identity_s></>   </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_neg_s></>        </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_floor_s></>      </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_ceil_s></>       </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_exp_s></>        </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_inv_s></>        </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_s></>       </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_hard_s></>  </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_leaky_s></> </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_tanh_s></>       </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_tanh_hard_s></>  </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_tanh_leaky_s></> </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_softplus_s></>   </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_relu_s></>       </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_relu_leaky_s></> </> </>
+
+                <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_div_s></> </> </>
+                <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> </> </>
+                <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></> </> </>
+                <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></> </> </>
+                <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_sub_s></> </> </>
+            </>
+        </>
+    </>
+
+</></>
