work on evaluation; re-implemented haptive syntacs and semantics in lion

--- a/eval/lion_eval_01.cfg
+++ b/eval/lion_eval_01.cfg
@@ -45,7 +45,9 @@
         max_dim       :  3
         v_min         : -1.0
         v_max         :  1.0
-        cycles        : 1000
+        cycles        : 10000
+
+        tolerated_cycles: <bcore_arr_uz_s> 1977 </>
 
         //eval : <lion_nop_eval_show_param_s></>
         //eval: <lion_nop_eval_ar2_s></>
