--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -2,7 +2,8 @@
  *  Actual configuration files to be executed are specified by file reference.
  */
 
-//<#file> "../training/haptive_test01.cfg" </>
-//<#file> "../eval/haptive_eval_set_01.cfg" </>
-<#file> "../eval/lion_eval_01.cfg" </>
-
+<bcore_main_set_s> arr: <bcore_main_arr_s>
+//    <#file> "../eval/haptive_eval_set_01.cfg" </>
+//    <#file> "../eval/lion_nop_eval_01.cfg"        </>
+    <#file> "../eval/lion_net_eval_set_01.cfg"        </>
+</></>
