--- a/eval/lion_nop_eval_set_01.cfg
+++ b/eval/lion_nop_eval_set_01.cfg
@@ -19,18 +19,18 @@
     <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_relu_leaky_s></> ha:"<f3_t>-1"   hr:"<f3_t>-0.01" </> </>
 
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<f2_t>((1))" hb:"((1))" hr:"((1))" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"(1 2)" hb:"3" hr:"(3 6)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"(3 2)"  hb: "(2 1)"  hr: "(5 3)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f2_t>(3 2)" hb:"<f2_t>(2 1)" hr:"<f2_t>(5 3)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f2_t>(3 2)" hb:"<f3_t>(2 1)" hr:"<f3_t>(5 3)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f3_t>(3 2)" hb:"<f2_t>(2 1)" hr:"<f3_t>(5 3)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_sub_s></>  ha:"(3 2)" hb:"(2 1)" hr:"(1 1)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_div_s></>  ha:"(4 4)" hb:"(2 1)" hr:"(2 4)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"(1 2)" hb:"(2 2)" hr:"(2 4)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"3" hb:"(1 2)" hr:"(3 6)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<htp>(1 2)" hb:"((2 3 1)(4 5 2))" hr:"<htp>(10 13 5)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<htp>((2 3 1)(4 5 2))" hb:"(1 2)" hr:"(10 13 5)" </> </>
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"((2 3)(4 5)(1 1))" hb:"(1 2)" hr:"(8 14 3)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"(1:2)" hb:"3" hr:"(3:6)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"(3:2)"  hb: "(2:1)"  hr: "(5:3)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f2_t>(3:2)" hb:"<f2_t>(2:1)" hr:"<f2_t>(5:3)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f2_t>(3:2)" hb:"<f3_t>(2:1)" hr:"<f3_t>(5:3)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f3_t>(3:2)" hb:"<f2_t>(2:1)" hr:"<f3_t>(5:3)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_sub_s></>  ha:"(3:2)" hb:"(2:1)" hr:"(1:1)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_div_s></>  ha:"(4:4)" hb:"(2:1)" hr:"(2:4)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"(1:2)" hb:"(2:2)" hr:"(2:4)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"3" hb:"(1:2)" hr:"(3:6)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<htp>(1:2)" hb:"((2:3:1):(4:5:2))" hr:"<htp>(10:13:5)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<htp>((2:3:1):(4:5:2))" hb:"(1:2)" hr:"(10:13:5)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"((2:3):(4:5):(1:1))" hb:"(1:2)" hr:"(8:14:3)" </> </>
 
     <lion_nop_eval_generator_s>
         param: <lion_nop_eval_param_s> ha:"#" hb:"#" verbosity:1 rval: 1235 </>
@@ -60,6 +60,7 @@
                 <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_floor_s></>      </> </>
                 <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_ceil_s></>       </> </>
                 <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_exp_s></>        </> </>
+                <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_log_s></>        </> </>
                 <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_inv_s></>        </> </>
                 <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_s></>       </> </>
                 <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_lgst_hard_s></>  </> </>
