--- a/eval/lion_nop_eval_set_01.cfg
+++ b/eval/lion_nop_eval_set_01.cfg
@@ -18,14 +18,21 @@
     <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_relu_s></>       ha:"<f2_t>-1"   hr:"<f2_t>0" </> </>
     <lion_nop_eval_ar1_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar1_relu_leaky_s></> ha:"<f3_t>-1"   hr:"<f3_t>-0.01" </> </>
 
-    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<f2_t>((1))" hb:"((1))" hr:"((1))" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<f2_t>1" hb:"1" hr:"1" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<f2_t>1[1[1" hb:"1[1[1" hr:"1[1[1" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"(1:2)" hb:"3" hr:"(3:6)" </> </>
+
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"(3:2)"  hb: "(2:1)"  hr: "(5:3)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"(3:2)"  hb: "2"      hr: "(5:4)" </> </>
+
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f2_t>(3:2)" hb:"<f2_t>(2:1)" hr:"<f2_t>(5:3)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f2_t>(3:2)" hb:"<f3_t>(2:1)" hr:"<f3_t>(5:3)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f3_t>(3:2)" hb:"<f2_t>(2:1)" hr:"<f3_t>(5:3)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_sub_s></>  ha:"(3:2)" hb:"(2:1)" hr:"(1:1)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_div_s></>  ha:"(4:4)" hb:"(2:1)" hr:"(2:4)" </> </>
+
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_div_s></>  ha:"(0.5:-1:1.5)" hb:"0.5" hr:"(1:-2:3)" </> </>
+
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"(1:2)" hb:"(2:2)" hr:"(2:4)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"3" hb:"(1:2)" hr:"(3:6)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<htp>(1:2)" hb:"((2:3:1):(4:5:2))" hr:"<htp>(10:13:5)" </> </>
@@ -45,9 +52,12 @@
         max_dim       :  3
         v_min         : -1.0
         v_max         :  1.0
-        cycles        : 1000
+        cycles        : 10000
 
-        tolerated_cycles: <bcore_arr_uz_s> 1977 </>
+        /** Tests producing an error due to borderline or degenerate conditions are deemed correct (tolerated)
+         *  The list contains cycle numbers of such tests
+         */
+        tolerated_cycles: <bcore_arr_uz_s> 1977 2460 </>
 
         //eval : <lion_nop_eval_show_param_s></>
         //eval: <lion_nop_eval_ar2_s></>
