--- a/eval/lion_nop_eval_set_01.cfg
+++ b/eval/lion_nop_eval_set_01.cfg
@@ -57,7 +57,7 @@
         /** Tests producing an error due to borderline or degenerate conditions are deemed correct (tolerated)
          *  The list contains cycle numbers of such tests
          */
-        tolerated_cycles: <bcore_arr_uz_s> 1977 2460 </>
+        tolerated_cycles: <bcore_arr_uz_s> 1977 2460 2872 </>
 
         //eval : <lion_nop_eval_show_param_s></>
         //eval: <lion_nop_eval_ar2_s></>
