added eci-pow; haptive-syntax; code cleanup; debugging

--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -70,7 +70,7 @@
 
     <lion_net_eval_ap_s> param: <lion_net_eval_param_s>
         name: "HTP OPERATIONS" verbosity: -1
-        src:  "cell ( y <- a ) { y = a^t^t; };"
+        src:  "cell ( y <- a ) { y = a~~; };"
         in: <bhvm_holor_adl_s> "<f2_t>( 1:2 ):( 3:4 )" </>
         out:<bhvm_holor_adl_s> "<f2_t>( 1:2 ):( 3:4 )" </>
     </> </>
@@ -103,7 +103,7 @@
                 cell( y <- a )
                 {
                     adaptive v1 = ( 0.5 : 1.0 );
-                    y = a^t ** v1;
+                    y = a~ ** v1;
                 }
             "
 
