--- a/eval/lion_nop_eval_set_01.cfg
+++ b/eval/lion_nop_eval_set_01.cfg
@@ -21,9 +21,11 @@
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<f2_t>1" hb:"1" hr:"1" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<f2_t>1[1[1" hb:"1[1[1" hr:"1[1[1" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"(1:2)" hb:"3" hr:"(3:6)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></>  ha:"(1:2):(2:1)" hb:"(3:2)" hr:"(3:4):(6:2)" </> </>
 
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"(3:2)"  hb: "(2:1)"  hr: "(5:3)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"(3:2)"  hb: "2"      hr: "(5:4)" </> </>
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"(3:2):(3:2)"  hb: "(2:1)" hr: "(5:3):(5:3)" </> </>
 
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f2_t>(3:2)" hb:"<f2_t>(2:1)" hr:"<f2_t>(5:3)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></>  ha:"<f2_t>(3:2)" hb:"<f3_t>(2:1)" hr:"<f3_t>(5:3)" </> </>
@@ -38,6 +40,8 @@
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<htp>(1:2)" hb:"((2:3:1):(4:5:2))" hr:"<htp>(10:13:5)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"<htp>((2:3:1):(4:5:2))" hb:"(1:2)" hr:"(10:13:5)" </> </>
     <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_bmul_s></> ha:"((2:3):(4:5):(1:1))" hb:"(1:2)" hr:"(8:14:3)" </> </>
+
+    <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_pow_s></>  ha:"(1:2:3)" hb:"2" hr:"(1:4:9)" </> </>
 
     <lion_nop_eval_generator_s>
         param: <lion_nop_eval_param_s> ha:"#" hb:"#" verbosity:1 rval: 1235 </>
@@ -57,7 +61,7 @@
         /** Tests producing an error due to borderline or degenerate conditions are deemed correct (tolerated)
          *  The list contains cycle numbers of such tests
          */
-        tolerated_cycles: <bcore_arr_uz_s> 1977 2460 2872 </>
+        tolerated_cycles: <bcore_arr_uz_s> 1977 2460 2872 7314 </>
 
         //eval : <lion_nop_eval_show_param_s></>
         //eval: <lion_nop_eval_ar2_s></>
@@ -87,6 +91,7 @@
                 <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_mul_s></> </> </>
                 <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_add_s></> </> </>
                 <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_sub_s></> </> </>
+                <lion_nop_eval_ar2_s> param: <lion_nop_eval_param_s> nop:<lion_nop_ar2_pow_s></> </> </>
             </>
         </>
     </>
