--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -4,10 +4,10 @@
 
 <bcore_main_set_s> arr: <bcore_main_arr_s>
 //    <#file> "../eval/haptive_eval_set_01.cfg" </>
-    <#file> "../eval/lion_nop_eval_set_01.cfg" </>
-    <#file> "../eval/lion_net_eval_set_01.cfg" </>
+//    <#file> "../eval/lion_nop_eval_set_01.cfg" </>
+//    <#file> "../eval/lion_net_eval_set_01.cfg" </>
 
-//    <lion_net_eval_frame_s> </>
+    <lion_net_eval_frame_s> </>
 //    <lion_net_eval_timing_s> </>
 
 </></>
