--- a/eval/lion_net_eval_set_01.cfg
+++ b/eval/lion_net_eval_set_01.cfg
@@ -119,31 +119,48 @@
 
     <lion_net_eval_frame_s>
         param: <lion_net_eval_param_s>
-            name: "Frame" verbosity: 10
-            src: "( y <- a, b ) { y = b + a / ( a~ ** a ) ^ ( 1/2 ); };"
-            in: <bhvm_holor_adl_s> "(1:1)" "(1:1)" </>
-            //out: <bhvm_holor_adl_s> "(1.70711:1.70711)" </>
+            name: "Frame" verbosity: -1 max_dev: 1E-4 epsilon: 1E-6
+            src: "( y <- a ) { y = ( a~ ** a ); };"
+            in: <bhvm_holor_adl_s> "(1:2):(3:4)" </>
+            out: <bhvm_holor_adl_s> "(10:14):(14:20)" </>
         </>
-        jacobian_test: true
     </>
 
-//    <lion_net_eval_frame_s>
-//        param: <lion_net_eval_param_s>
-//            name: "Frame" verbosity: -1
-//            src: "( y <- a, b ) { y = a + b; };"
-//            in: <bhvm_holor_adl_s> "1:1" "2:2" </>
-//        </>
-//        jacobian_test: true
-//    </>
-//
-//    <lion_net_eval_frame_s>
-//        param: <lion_net_eval_param_s>
-//            name: "Frame" verbosity: 10 max_dev: 1E-4
-//            src: "( y <- a, b ) { y = a / ( b + a ); };"
-//            in: <bhvm_holor_adl_s> "1:2" "<f2_t>2" </>
-//        </>
-//        jacobian_test: true
-//    </>
+    <lion_net_eval_frame_s>
+        param: <lion_net_eval_param_s>
+            name: "Frame" verbosity: -1
+            src: "( y <- a, b ) { y = b + a / ( a~ ** a ) ^ ( 1/2 ); };"
+            in: <bhvm_holor_adl_s> "(1:1)" "(1:1)" </>
+            out: <bhvm_holor_adl_s> "(1.70711:1.70711)" </>
+        </>
+    </>
+
+    <lion_net_eval_frame_s>
+        param: <lion_net_eval_param_s>
+            name: "Frame" verbosity: -1
+            src: "( y <- a, b ) { y = a + b; };"
+            in: <bhvm_holor_adl_s> "1:1" "2:2" </>
+            out: <bhvm_holor_adl_s> "3:3" </>
+        </>
+    </>
+
+    <lion_net_eval_frame_s>
+        param: <lion_net_eval_param_s>
+            name: "Frame" verbosity: -1
+            src: "( y <- a, b ) { y = a * b; };"
+            in: <bhvm_holor_adl_s> "1:1" "2:2" </>
+            out: <bhvm_holor_adl_s> "2:2" </>
+        </>
+    </>
+
+    <lion_net_eval_frame_s>
+        param: <lion_net_eval_param_s>
+            name: "Frame" verbosity: -1 max_dev: 1E-4
+            src: "( y <- a, b ) { y = a / ( b + a ); };"
+            in: <bhvm_holor_adl_s> "1:2" "<f2_t>2" </>
+            out: <bhvm_holor_adl_s> "0.33333:0.5" </>
+        </>
+    </>
 
     </>
 </>
